--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Umainebook</title>
+  <title>UMaine Book</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header>
+		<h1>Stop Getting Screwed Over by the Bookstore</h1>
+		<h2>Sell those "special edition" textbooks here</h2>
+	</header>		
 
 <%= yield %>
 
