--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
   <h2>Sell your books, without the bookstore</h2>
   <%= form_tag books_path, :method => 'get' do %>
     <p>
-      <%= text_field_tag :search, params[:search], :class => 'main-search', :placeholder => "Book Title or ISBN #" %>
+      <%= text_field_tag :search, params[:search], :class => 'main-search', :placeholder => "Book Title or Class #" %>
       <%= submit_tag "Search Books", :name => nil, :class => 'btn btn-success' %>
     </p>
   <% end %>
