--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,10 +9,10 @@
 
 <% content_for :cta do %>
 	<h1>Replace the UMaine Bookstore</h1>
-  <h2>Sell your books, without the bookstore</h2>
+  <h2>Sell your books to classmates. No bookstore required</h2>
   <%= form_tag books_path, :method => 'get' do %>
     <p>
-      <%= text_field_tag :search, params[:search], :class => 'main-search', :placeholder => "Book Title or Class #" %>
+      <%= text_field_tag :search, params[:search], :class => 'main-search', :placeholder => "Book ISBN or Class #" %>
       <%= submit_tag "Search Books", :name => nil, :class => 'btn btn-success' %>
     </p>
   <% end %>
