--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
 </div>  
 
 <div class="container">
+  <p class="notice"><%= notice %></p>
   <div class="row">
     <div class="span12"><%= yield %></div>
   </div>
