trying to fix link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <a class="brand" href="#">UMaine Books</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li><%= link_to "View Books", books_path %></li>
+            <li><%= link_to "View Books", root_path %></li>
             <li><%= link_to "Post your Book", new_book_path %></li>
           </ul>
         </div>
