--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -15,7 +15,7 @@
 			Do you hate spending hundreds of dollars every semester on textbooks, and when it's time to sell them back, they will only give you <strong>$20 bucks?</strong>
 		</p>
 		<p>
-			Does your professor require that you purchase a "special edition" textbook that he/she wrote himself? It's really lame, but it happens all the time.
+			Does your professor require that you purchase a "special edition" textbook that he/she wrote himself? And you can't even sell it back because there's a "new edition" coming out?
 		</p><br >
 		<h2>Sell your books to fellow UMaine Students</h2>
 		<p>
