--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">UMaine Books</a>
+        <a class="brand">UMaine Books</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li><%= link_to "View Books", books_path %></li>
             <li><%= link_to "Post your Book", new_book_path %></li>
           </ul>
         </div>
