--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -19,12 +19,8 @@
 		</p><br >
 		<h2>Sell your books to fellow UMaine Students</h2>
 		<p>
-			Stop spending all your time posting your books to lame Facebook groups that no one reads. Post your book here. It's easy, and there's no charge.....I promise 
+			<strong>It's easy, just post your book.</strong> If someone is interested in your book, they will email you and setup an exchange on campus. There's no middleman, so you get the maximum price for your book.
 		</p>
-		<p>
-			No seriously, this cost me $10 bucks and some time to build. Just use it. 
-		</p>	
-
 	</div>	
 </div>
 
