--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand">UMaine Books</a>
+        <a class="brand" href="http://youmainebooks.com">UMaine Books</a>
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "Post your Book", new_book_path %></li>
