--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="http://youmainebooks.com">UMaine Books</a>
+        <a class="brand" href="http://youmainebooks.com">YOUMaine Books</a>
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "Post your Book", new_book_path %></li>
@@ -43,7 +43,22 @@
 </div>
 <footer class="footer">
   <div class="container">
-    Created by <a href="http://www.twitter.com/lukethomas14">Luke Thomas</a>
+    Created by <a href="http://www.twitter.com/lukethomas14" target="_blank">Luke Thomas.</a>
+    Learn why I created the <a href="http://lukethomas.com/the-textbook-industry-greed-its-getting-worse/" target="_blank">site.</a>
+
+    <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36823010-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </div>
 </footer>
 </body>
