--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -5,7 +5,7 @@
 			<%= f.input :course_number, :label => "Your Class Number", :placeholder => "ENG131" %>
 			<%= f.input :isbn, :label => "Book ISBN", :placeholder => "9 or 13 digit ISBN" %>
 			<%= f.input :price %>
-			<%= f.input :title %>
+			<%= f.input :title, :label => "Book Title" %>
 			<%= f.button :submit, :class => "btn btn-primary" %>
 		<% end %>	
 	</div>
