--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,10 @@
 	<h1>Books for Sale</h1>
 	<p class="marketing-byline">
 		Interested in a book? Email the student to purchase. It's that easy!
-	</p>	
+	</p>
+  <div class="fb-center">
+    <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.youmainebooks.com&amp;send=false&amp;layout=standard&amp;width=600&amp;show_faces=true&amp;font=lucida+grande&amp;colorscheme=light&amp;action=like&amp;height=80&amp;appId=430738826948169" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:600px; height:80px;" allowTransparency="true"></iframe>
+  </div>  	
 </div>	
 
 <%= render :partial => "books" %>
