zip code validation

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -6,6 +6,7 @@
 			<%= f.input :isbn, :label => "Book ISBN", :placeholder => "9 or 13 digit ISBN" %>
 			<%= f.input :price %>
 			<%= f.input :title, :label => "Book Title" %>
+			<%= f.input :zip, :label => "What is Maine's Area Code?" %>
 			<%= f.button :submit, :class => "btn btn-primary" %>
 		<% end %>	
 	</div>
