--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,14 +1,43 @@
 <div class="container padding">
 	<div class="span3 new-book">	
-		<%= simple_form_for @book, :html => { :honeypot => true } do |f| %>
-			<%= f.input :email, :label => "UMaine Email Address" %>
-			<%= f.input :course_number, :label => "Your Class Number", :placeholder => "ENG131" %>
-			<%= f.input :isbn, :label => "Book ISBN", :placeholder => "9 or 13 digit ISBN" %>
-			<%= f.input :price %>
-			<%= f.input :title, :label => "Book Title" %>
-			<%= f.input :zip, :label => "What is Maine's Area Code?" %>
-			<%= f.button :submit, :class => "btn btn-primary" %>
-		<% end %>	
+		<%= form_for(@book) do |f| %>
+	  <% if @book.errors.any? %>
+	    <div id="error_explanation">
+	      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+	      <ul>
+	      <% @user.errors.full_messages.each do |msg| %>
+	        <li><%= msg %></li>
+	      <% end %>
+	      </ul>
+	    </div>
+	  <% end %>
+
+	  <div class="field">
+	    <%= f.label :Email %>
+	    <%= f.text_field :email, :placeholder => "Your UMaine Email" %>
+	  </div>
+	  <div class="field">
+	    <%= f.label :course_number %>
+	    <%= f.text_field :course_number, :placeholder => "ENG131" %>
+	  </div>
+	  <div class="field">
+	    <%= f.label :isbn %>
+	    <%= f.text_field :isbn, :placeholder => "10 or 13 Digit ISBN Number" %>
+	  </div>
+	  <div class="field">
+	    <%= f.label :price %>
+	    <%= f.text_field :price, :placeholder => "Price" %>
+	  </div>
+	  <div class="field">
+	    <%= f.label :title %>
+	    <%= f.text_field :title, :placeholder => "Book Title" %>
+	  </div>
+	  <%= show_simple_captcha %>
+	  <div class="actions">
+	    <%= f.submit :class => "btn btn-primary" %>
+	  </div>
+	<% end %>
 	</div>
 	<div class="span8 book-desc">
 		<h1>The Bookstore wants your $$$</h1>
