added recaptcha tags

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,17 +1,9 @@
 <div class="container padding">
 	<div class="span3 new-book">	
 		<%= form_for(@book) do |f| %>
-	  <% if @book.errors.any? %>
-	    <div id="error_explanation">
-	      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-	      <ul>
-	      <% @user.errors.full_messages.each do |msg| %>
-	        <li><%= msg %></li>
-	      <% end %>
-	      </ul>
-	    </div>
-	  <% end %>
+			<% @book.errors.full_messages.each do |msg| %>
+      <p><%= msg %></p>
+    <% end %>
 
 	  <div class="field">
 	    <%= f.label :Email %>
@@ -33,7 +25,6 @@
 	    <%= f.label :title %>
 	    <%= f.text_field :title, :placeholder => "Book Title" %>
 	  </div>
-	  <%= show_simple_captcha(:object=>"book") %>
 	  <div class="actions">
 	    <%= f.submit :class => "btn btn-primary" %>
 	  </div>
