--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -25,6 +25,7 @@
 	    <%= f.label :title %>
 	    <%= f.text_field :title, :placeholder => "Book Title" %>
 	  </div>
+	  <%= recaptcha_tags %>
 	  <div class="actions">
 	    <%= f.submit :class => "btn btn-primary" %>
 	  </div>
