--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
         <div class="nav-collapse">
           <ul class="nav">
             <li><%= link_to "Post your Book", new_book_path %></li>
+            <li><%= link_to "Browse Books", "#book-href" %></li>
           </ul>
         </div>
       </div>
