better href placement

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
 	<p class="marketing-byline">
 		Interested in a book? Email the student to purchase. It's that easy!
 	</p>
-  <div class="fb-center">
+  <div id="book-href" class="fb-center">
     <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.youmainebooks.com&amp;send=false&amp;layout=standard&amp;width=600&amp;show_faces=true&amp;font=lucida+grande&amp;colorscheme=light&amp;action=like&amp;height=80&amp;appId=430738826948169" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:600px; height:80px;" allowTransparency="true"></iframe>
   </div>  	
 </div>	
