--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <ul class="nav">
             <li><%= link_to "Post your Book", new_book_path %></li>
             <li><%= link_to "Browse Books", "#book-href" %></li>
-            <li><a href="https://docs.google.com/a/lukethomas.com/spreadsheet/viewform?formkey=dFN0T2hFc1Uyc0Z5MkJUODZOSXoydXc6MQ" target="_blank">Remove a Book</li>
+            <li><a href="https://docs.google.com/a/lukethomas.com/spreadsheet/viewform?formkey=dFN0T2hFc1Uyc0Z5MkJUODZOSXoydXc6MQ" target="_blank">Remove a Book</a></li>
           </ul>
         </div>
       </div>
